--- a/index.html
+++ b/index.html
@@ -13,7 +13,54 @@
 
 <body>
 
-    
+
+    <div class="header">
+        <div class="header__innder container">
+            <a href="" class="header__logo logo">
+                <img src="./images/logo.svg" class="logo__image" alt="arcarta" width="140" height="28" loading="lazy">
+            </a>
+            <nav>
+                <ul class="header__menu-list">
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            What is arcarta?
+                        </a>
+                    </li>
+
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            Solutions
+                        </a>
+                    </li>
+
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            Resources
+                        </a>
+                    </li>
+
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            FAQs
+                        </a>
+                    </li>
+
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            Contact
+                        </a>
+                    </li>
+
+                    <li class="header__menu-item">
+                        <a href="" class="header__menu-link">
+                            Login
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <button class="header__button button">Get Started</button>
+        </div>
+    </div>
 
 </body>
 
