--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@
 
 <body>
 
-
     <div class="header">
-        <div class="header__innder container">
+        <div class="header__inner container">
             <a href="" class="header__logo logo">
                 <img src="./images/logo.svg" class="logo__image" alt="arcarta" width="140" height="28" loading="lazy">
             </a>
