--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="" class="header__logo logo">
                 <img src="./images/logo.svg" class="logo__image" alt="arcarta" width="140" height="28" loading="lazy">
             </a>
-            <nav>
+            <nav class="header__menu">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
                         <a href="" class="header__menu-link">
