--- a/index.html
+++ b/index.html
@@ -61,6 +61,55 @@
         </div>
     </div>
 
+    <main class="content">
+        <div class="hero">
+            <div class="hero__main">
+                <div class="hero__tagline">
+                    <span class="tagline-bg--pink">New</span>
+                    <span class="tagline-bg--light">The Art Market Report</span>
+                </div>
+                <h1 class="hero__title">Rely on us</h1>
+                <div class="hero__description">
+                    <p>
+                        Our Customer Due Diligence platform helps you avoid fines or losing clients due to AML while
+                        protecting you from cybercrime.
+                    </p>
+                </div>
+                <button class="hero__button button">
+                    Learn More
+                </button>
+            </div>
+            <div class="hero__galleries">
+                <ul class="hero__galleries-list">
+                    <li class="hero__galleries-item">
+                        <img class="hero__galleries-image" src="./images/galleries/1.png" alt="COLNAGHI" width="255"
+                            height="95">
+                    </li>
+                    <li class="hero__galleries-item">
+                        <img class="hero__galleries-image" src="./images/galleries/2.png" alt="LUXEMBOURG+CO"
+                            width="255" height="95">
+                    </li>
+                    <li class="hero__galleries-item">
+                        <img class="hero__galleries-image" src="./images/galleries/3.png"
+                            alt="TOMASSO BROTHERS FINE ART" width="255" height="95">
+                    </li>
+                    <li class="hero__galleries-item">
+                        <img class="hero__galleries-image" src="./images/galleries/4.png" alt="Cristea Roberts Gallery"
+                            width="255" height="95">
+                    </li>
+                </ul>
+            </div>
+            <div class="hero__whatis">
+                <a href="" class="hero__whatis-link"> 
+                    What is arcarta?
+                    <img src="./images/arrow-right.png" alt="" width="20" height="20">
+                </a>
+            </div>
+            <div class="hero__picture">
+                <img src="./images/hero-bg.svg" alt="" width="1440" height="670">
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
