--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="hero">
             <div class="hero__main">
                 <div class="hero__tagline">
-                    <span class="tagline-bg--pink">New</span>
-                    <span class="tagline-bg--light">The Art Market Report</span>
+                    <span class="tagline-bg tagline-bg--pink">New</span>
+                    <span class="tagline-bg tagline-bg--light">The Art Market Report</span>
                 </div>
                 <h1 class="hero__title">Rely on us</h1>
                 <div class="hero__description">
@@ -100,9 +100,9 @@
                 </ul>
             </div>
             <div class="hero__whatis">
-                <a href="" class="hero__whatis-link"> 
-                    What is arcarta?
-                    <img src="./images/arrow-right.png" alt="" width="20" height="20">
+                <a href="" class="hero__whatis-link">
+                    <p class="whatis__text">What is arcarta?</p>
+                    <img class="whatis__icon" src="./images/arrow-right.png" alt="" width="20" height="20">
                 </a>
             </div>
             <div class="hero__picture">
