solutions cards style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <div class="header">
-        <div class="header__inner container">
+        <div class="header__inner">
             <a href="" class="header__logo logo">
                 <img src="./images/logo.svg" class="logo__image" alt="arcarta" width="140" height="28" loading="lazy">
             </a>
@@ -108,6 +108,67 @@
             <div class="hero__picture">
                 <img src="./images/hero-bg.svg" alt="" width="1440" height="670">
             </div>
+        </div>
+
+        <div class="solutions">
+            <ul class="solutions__list">
+                <li class="solutions__item">
+                    <article class="solutions-card">
+                        <img src="./images/cards/1.svg" alt="" class="solutions-card__image" width="" height="220">
+                        <div class="solutions-card__body">
+                            <h3 class="solutions-card__title">For Art Dealers</h3>
+                            <div class="solutions-card__description">
+                                <p>Galleries and independent art dealers</p>
+                            </div>
+                            <button class="solutions-card__button button button--light">
+                                Learn More
+                            </button>
+                        </div>
+                    </article>
+                </li>
+                <li class="solutions__item">
+                    <article class="solutions-card">
+                        <img src="./images/cards/2.svg" alt="" class="solutions-card__image" width="" height="220">
+                        <div class="solutions-card__body">
+                            <h3 class="solutions-card__title">For Advisors</h3>
+                            <div class="solutions-card__description">
+                                <p>Advisors, agents and consultants</p>
+                            </div>
+                            <button class="solutions-card__button button button--light">
+                                Learn More
+                            </button>
+                        </div>
+                    </article>
+                </li>
+                <li class="solutions__item">
+                    <article class="solutions-card">
+                        <img src="./images/cards/3.svg" alt="" class="solutions-card__image" width="" height="220">
+                        <div class="solutions-card__body">
+                            <h3 class="solutions-card__title">For Auctioneers</h3>
+                            <div class="solutions-card__description">
+                                <p>Online and offline auctioneers</p>
+                            </div>
+                            <button class="solutions-card__button button button--light">
+                                Learn More
+                            </button>
+                        </div>
+                    </article>
+                </li>
+                <li class="solutions__item">
+                    <article class="solutions-card">
+                        <img src="./images/cards/4.svg" alt="" class="solutions-card__image" width="" height="220">
+                        <div class="solutions-card__body">
+                            <h3 class="solutions-card__title">For Buyers & Collectors</h3>
+                            <div class="solutions-card__description">
+                                <p>Receiving Invoices, making card payments and sending your ID and address documents</p>
+                            </div>
+                            <button class="solutions-card__button button button--light">
+                                Learn More
+                            </button>
+                        </div>
+                    </article>
+                </li>
+            </ul>
         </div>
     </main>
 </body>
