--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
                         <div class="solutions-card__body">
                             <h3 class="solutions-card__title">For Buyers & Collectors</h3>
                             <div class="solutions-card__description">
-                                <p>Receiving Invoices, making card payments and sending your ID and address documents</p>
+                                <p>Receiving Invoices, making card payments and sending your ID and address documents
+                                </p>
                             </div>
                             <button class="solutions-card__button button button--light">
                                 Learn More
@@ -169,6 +170,26 @@
                     </article>
                 </li>
             </ul>
+        </div>
+
+        <div class="quiz">
+            <div class="quiz__card">
+                <span class="quiz__card-number">01</span>
+                <img class="quiz__card-icon" src="./images/notebook-icon.svg" alt="" width="64" height="37">
+                <div class="quiz__card-title">Compliance Quiz</div>
+                <div class="quiz__card-begin-button">
+                    Begin
+                    <img class="" src="./images/white-arrow-right.svg" alt="" height="20" width="20">
+                </div>
+            </div>
+            <div class="quiz__body">
+                <span class="quiz__tagline tagline-bg tagline-bg--pink">New</span>
+                <h2 class="quiz__title">Does Anti-money Laundering affect you?</h2>
+                <div class="quiz__description">
+                    <p>A short, interactive quiz to check if your art business is affected by 5AMLD regulation.</p>
+                </div>
+                <button class="quiz__button button button--light"> Take the Quiz </button>
+            </div>
         </div>
     </main>
 </body>
