feedback-form layout

--- a/index.html
+++ b/index.html
@@ -191,6 +191,27 @@
                 <button class="quiz__button button button--light"> Take the Quiz </button>
             </div>
         </div>
+
+        <div class="feedback-form">
+            <img src="./images/form-pic.svg" alt="" class="feedback-form__image" height="346" width="325">
+
+            <div class="feedback-form__body">
+                <h3 class="feedback-form__title">Art world insight</h3>
+                <div class="feedback-form__description">
+                    <p>
+                        Receive our newsletter direct to your inbox to follow updates to legislation and the EU
+                        art-market's
+                        response.
+                    </p>
+                </div>
+                <div class="feedback-form__input-container">
+                    <input class="feedback-form__input" type="text" placeholder="Your email">
+                    <button class="feedback-form__submit-button">
+                        <img src="./images/arrow.svg" alt="" height="20" width="20"/>
+                    </button>
+                </div>
+            </div>
+
     </main>
 </body>
 
