feedback-form layout fix

--- a/index.html
+++ b/index.html
@@ -207,10 +207,11 @@
                 <div class="feedback-form__input-container">
                     <input class="feedback-form__input" type="text" placeholder="Your email">
                     <button class="feedback-form__submit-button">
-                        <img src="./images/arrow.svg" alt="" height="20" width="20"/>
+                        <img src="./images/arrow.svg" alt="" height="20" width="20" />
                     </button>
                 </div>
             </div>
+        </div>
 
     </main>
 </body>
