--- a/index.html
+++ b/index.html
@@ -230,8 +230,11 @@
                 <img src="./images/footer/2.png" alt="" class="footer__provider-image">
             </div>
             <div class="footer__copyright">
-                <span class="text-light">Registered with the Information Commissioner's Office (ICO) Registration number: ZA679248</span>
-                <span class="text-light">© Arc-Pay Ltd 2021</span>
+                <span class="text-light">Registered with the Information Commissioner's Office (ICO) Registration
+                    number: ZA679248<br>
+                </span>
+                <span class="text-light">© Arc-Pay Ltd 2021
+                </span>
             </div>
         </div>
         <div class="footer__body">
@@ -370,7 +373,7 @@
                         <a href="" class="footer__body-link">
                             The Art Market Report
                         </a>
-                        <span class="quiz__tagline tagline-bg tagline-bg--pink">New</span>
+                        <span class="footer__tagline tagline-bg tagline-bg--pink">New</span>
                     </li>
                 </ul>
             </div>
