--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=0.1">
     <meta http-equiv="X-UA-Compatible" content="ie-edge">
     <link rel="stylesheet" href="./styles/styles.css">
-    <title>arcarta</title>
+    <title>Arcarta</title>
 </head>
 
 <body>
 
     <div class="header">
         <div class="header__inner">
-            <a href="" class="header__logo logo">
-                <img src="./images/logo.svg" class="logo__image" alt="arcarta" width="140" height="28" loading="lazy">
+            <a href="" class="header__logo-wrapper logo">
+                <img src="./images/logo.svg" class="header__logo" alt="arcarta logo" width="140" height="28"
+                    loading="lazy">
             </a>
-            <nav class="header__menu">
+            <nav class="header__menu hidden-mobile">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
                         <a href="" class="header__menu-link">
@@ -57,7 +58,11 @@
                     </li>
                 </ul>
             </nav>
-            <button class="header__button button">Get Started</button>
+            <button class="header__button button hidden-mobile">Get Started</button>
+            <button class="header__burger-button button__burger-menu burger-button visible-mobile" type="button"
+                onclick="mobileOverlay.showModal()">
+                <span class="visually-hidden">Open navigation menu</span>
+            </button>
         </div>
     </div>
 
@@ -389,6 +394,24 @@
         </div>
     </div>
     </div>
+
+    <dialog class="mobile-overlay visible-mobile" id="mobileOverlay">
+        <form class="mobile-overlay__close-button-wrapper" method="dialog">
+            <button class="mobile-overlay__close-button cross-button" type="submit">
+                <span class="visually-hidden">Close navigation menu</span>
+            </button>
+        </form>
+        <div class="mobile-overlay__body">
+            <ul class="mobile-overlay__list">
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">What is arcarta?</a></li>
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">Solutions</a></li>
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">Resources</a></li>
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">FAQs</a></li>
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">Contact</a></li>
+                <li class="mobile-overlay__item"><a href="/" class="mobile-overlay__link">Login</a></li>
+            </ul>
+        </div>
+    </dialog>
 </body>
 
 </html>
