add new color variable and enhance responsive styles across components

--- a/index.html
+++ b/index.html
@@ -106,12 +106,13 @@
             </div>
             <div class="hero__whatis">
                 <a href="" class="hero__whatis-link">
-                    <p class="whatis__text">What is arcarta?</p>
-                    <img class="whatis__icon" src="./images/arrow-right.png" alt="" width="20" height="20">
+                    <p class="hero__whatis-text">What is arcarta?</p>
+                    <div class="hero__whatis-icon-wrapper">
+                        <img class="hero__whatis-icon" src="./images/arrow.svg" alt="" height="10" width="10" />
+                    </div>
                 </a>
             </div>
             <div class="hero__picture">
-                <img src="./images/hero-bg.svg" alt="" width="1440" height="670">
             </div>
         </div>
 
@@ -178,7 +179,7 @@
         </div>
 
         <div class="quiz">
-            <div class="quiz__card">
+            <div class="quiz__card hidden-mobile">
                 <span class="quiz__card-number">01</span>
                 <img class="quiz__card-icon" src="./images/notebook-icon.svg" alt="" width="64" height="37">
                 <div class="quiz__card-title">Compliance Quiz</div>
@@ -198,7 +199,8 @@
         </div>
 
         <div class="feedback-form">
-            <img src="./images/form-pic.svg" alt="" class="feedback-form__image" height="346" width="325">
+            <img class="hidden-mobile" src="./images/form-pic.svg" alt="" class="feedback-form__image" height="346"
+                width="325">
 
             <div class="feedback-form__body">
                 <h3 class="feedback-form__title">Art world insight</h3>
@@ -219,7 +221,7 @@
         </div>
 
     </main>
-    <div class="footer">
+    <div class="footer content">
         <div class="footer__credits">
             <img src="./images/logo.svg" alt="arcarta" class="footer__credits-logo" width="150" height="30">
             <div class="footer__credits-description">
@@ -376,8 +378,7 @@
                     </li>
                     <li class="footer__body-item">
                         <a href="" class="footer__body-link">
-                            The Art Market Report
-                        </a>
+                            The Art Market Report</a>
                         <span class="footer__tagline tagline-bg tagline-bg--pink">New</span>
                     </li>
                 </ul>
@@ -386,8 +387,8 @@
     </div>
     <div class="footer__bottom">
         <img src="./images/footer/3.svg" alt="" width="161" height="76">
+        <div class="footer__privacy text-light">Privacy & Terms</div>
         <div class="footer__bottom-icons">
-            <span class="footer__privacy text-light">Privacy & Terms</span>
             <img src="./images/footer/icons/Frame.svg" alt="" height="22" width="22">
             <img src="./images/footer/icons/Frame-1.svg" alt="" height="23" width="23">
             <img src="./images/footer/icons/Frame-2.svg" alt="" height="22" width="22">
