update styles for various components to improve layout and responsiveness

--- a/index.html
+++ b/index.html
@@ -12,47 +12,46 @@
 </head>
 
 <body>
-
-    <div class="header">
+    <header class="header">
         <div class="header__inner">
-            <a href="" class="header__logo-wrapper logo">
+            <a href="#" class="header__logo-wrapper logo">
                 <img src="./images/logo.svg" class="header__logo" alt="arcarta logo" width="140" height="28"
                     loading="lazy">
             </a>
             <nav class="header__menu hidden-mobile">
                 <ul class="header__menu-list">
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             What is arcarta?
                         </a>
                     </li>
 
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             Solutions
                         </a>
                     </li>
 
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             Resources
                         </a>
                     </li>
 
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             FAQs
                         </a>
                     </li>
 
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             Contact
                         </a>
                     </li>
 
                     <li class="header__menu-item">
-                        <a href="" class="header__menu-link">
+                        <a href="#" class="header__menu-link">
                             Login
                         </a>
                     </li>
@@ -64,7 +63,7 @@
                 <span class="visually-hidden">Open navigation menu</span>
             </button>
         </div>
-    </div>
+    </header>
 
     <main class="content">
         <div class="hero">
@@ -105,7 +104,7 @@
                 </ul>
             </div>
             <div class="hero__whatis">
-                <a href="" class="hero__whatis-link">
+                <a href="#" class="hero__whatis-link">
                     <p class="hero__whatis-text">What is arcarta?</p>
                     <div class="hero__whatis-icon-wrapper">
                         <img class="hero__whatis-icon" src="./images/arrow.svg" alt="" height="10" width="10" />
@@ -119,7 +118,7 @@
         <div class="solutions">
             <ul class="solutions__list">
                 <li class="solutions__item">
-                    <article class="solutions-card">
+                    <article class="solutions-card solutions-card--short">
                         <img src="./images/cards/1.svg" alt="" class="solutions-card__image" width="" height="220">
                         <div class="solutions-card__body">
                             <h3 class="solutions-card__title">For Art Dealers</h3>
@@ -133,7 +132,7 @@
                     </article>
                 </li>
                 <li class="solutions__item">
-                    <article class="solutions-card">
+                    <article class="solutions-card solutions-card--short">
                         <img src="./images/cards/2.svg" alt="" class="solutions-card__image" width="" height="220">
                         <div class="solutions-card__body">
                             <h3 class="solutions-card__title">For Advisors</h3>
@@ -166,7 +165,8 @@
                         <div class="solutions-card__body">
                             <h3 class="solutions-card__title">For Buyers & Collectors</h3>
                             <div class="solutions-card__description">
-                                <p>Receiving Invoices, making card payments and sending your ID and address documents
+                                <p>Receiving Invoices, making card payments and sending your ID and address
+                                    documents
                                 </p>
                             </div>
                             <button class="solutions-card__button button button--light">
@@ -185,7 +185,10 @@
                 <div class="quiz__card-title">Compliance Quiz</div>
                 <div class="quiz__card-begin-button">
                     Begin
-                    <img class="" src="./images/white-arrow-right.svg" alt="" height="20" width="20">
+                    <span class="quiz__img-wrapper" width="20" height="20"
+                        style="display: flex; align-items: center; justify-content: center;">
+                        <img class="" src="./images/white-arrow-right.svg" alt="" height="11" width="14">
+                    </span>
                 </div>
             </div>
             <div class="quiz__body">
@@ -199,11 +202,11 @@
         </div>
 
         <div class="feedback-form">
-            <img class="hidden-mobile" src="./images/form-pic.svg" alt="" class="feedback-form__image" height="346"
-                width="325">
+            <img class="hidden-mobile" src="./images/form-pic.svg" alt="" class="feedback-form__image" height="325"
+                width="346">
 
             <div class="feedback-form__body">
-                <h3 class="feedback-form__title">Art world insight</h3>
+                <h3 class="feedback-form__title">Art world insight.</h3>
                 <div class="feedback-form__description">
                     <p>
                         Receive our newsletter direct to your inbox to follow updates to legislation and the EU
@@ -221,11 +224,12 @@
         </div>
 
     </main>
-    <div class="footer content">
+
+    <footer class="footer content">
         <div class="footer__credits">
             <img src="./images/logo.svg" alt="arcarta" class="footer__credits-logo" width="150" height="30">
             <div class="footer__credits-description">
-                <p>Our Customer Due Diligence platform helps you avoid fines or losing clients due to AML while
+                <p>Our Customer Due Diligence platform helps you avoid </br> fines or losing clients due to AML while
                     protecting you from cybercrime.</p>
             </div>
             <div class="footer__provider">
@@ -237,7 +241,7 @@
                 <img src="./images/footer/2.png" alt="" class="footer__provider-image">
             </div>
             <div class="footer__copyright">
-                <span class="text-light">Registered with the Information Commissioner's Office (ICO) Registration
+                <span class="text-light">Registered with the Information Commissioner's </br> Office (ICO) Registration
                     number: ZA679248<br>
                 </span>
                 <span class="text-light">© Arc-Pay Ltd 2021
@@ -253,52 +257,52 @@
                         </h5>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Home
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             About us
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Why arcarta
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Success Stories
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             FAQ's
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Contact Us
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Join
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Invite
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Compliance Quiz
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             ID Document Quiz
                         </a>
                     </li>
@@ -310,32 +314,32 @@
                         Solutions
                     </h5>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             For Galleries
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             For Advisors
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             For Auctioneers
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             For Secure Payments
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             For Buyers & Collectors
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Online AML Training
                         </a>
                     </li>
@@ -347,48 +351,49 @@
                         Resources
                     </h5>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Articles
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Resources
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Help Centre
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             The Bigger Picture
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Login
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             Brand Assets
                         </a>
                     </li>
                     <li class="footer__body-item">
-                        <a href="" class="footer__body-link">
+                        <a href="#" class="footer__body-link">
                             The Art Market Report</a>
                         <span class="footer__tagline tagline-bg tagline-bg--pink">New</span>
                     </li>
                 </ul>
             </div>
         </div>
-    </div>
+    </footer>
     <div class="footer__bottom">
         <img src="./images/footer/3.svg" alt="" width="161" height="76">
-        <div class="footer__privacy text-light">Privacy & Terms</div>
         <div class="footer__bottom-icons">
+            <div class="footer__privacy text-light">Privacy & Terms</div>
+
             <img src="./images/footer/icons/Frame.svg" alt="" height="22" width="22">
             <img src="./images/footer/icons/Frame-1.svg" alt="" height="23" width="23">
             <img src="./images/footer/icons/Frame-2.svg" alt="" height="22" width="22">
