enhance footer links with hover effects and update structure for better accessibility

--- a/index.html
+++ b/index.html
@@ -392,11 +392,18 @@
     <div class="footer__bottom">
         <img src="./images/footer/3.svg" alt="" width="161" height="76">
         <div class="footer__bottom-icons">
-            <div class="footer__privacy text-light">Privacy & Terms</div>
-
-            <img src="./images/footer/icons/Frame.svg" alt="" height="22" width="22">
-            <img src="./images/footer/icons/Frame-1.svg" alt="" height="23" width="23">
-            <img src="./images/footer/icons/Frame-2.svg" alt="" height="22" width="22">
+            <a href="#">
+                <div class="footer__privacy text-light">Privacy & Terms</div>
+            </a>
+            <a href="#" class="footer__socials">
+                <img src="./images/footer/icons/Frame.svg" alt="" height="22" width="22">
+            </a>
+            <a href="#" class="footer__socials">
+                <img src="./images/footer/icons/Frame-1.svg" alt="" height="23" width="23">
+            </a>
+            <a href="#" class="footer__socials">
+                <img src="./images/footer/icons/Frame-2.svg" alt="" height="22" width="22">
+            </a>
         </div>
     </div>
     </div>
